--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "^8.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
